pre data processing, blaancing the data set and model building and traning
we scale the data to reduce the effect of outliers and we only to it to x train to reduce data leakage. next I have added logistic regression model, random forest, xgboost, and a very basic cnn.

--- a/Credit-Card-Fraud.ipynb
+++ b/Credit-Card-Fraud.ipynb
@@ -246,6 +246,139 @@
     "print(\"Validation set shape:\", X_val.shape)\n",
     "print(\"Test set shape:\", X_test.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "06e1177e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessing complete!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import RobustScaler\n",
+    "\n",
+    "scaler = RobustScaler().fit(X_train[:, [0, -1]])  \n",
+    "\n",
+    "def safe_scale(data, scaler, time_amount_indices):\n",
+    "    scaled = data.copy()\n",
+    "    scaled[:, time_amount_indices] = scaler.transform(scaled[:, time_amount_indices])\n",
+    "    return scaled\n",
+    "\n",
+    "time_amount_idx = [0, -1]  \n",
+    "X_train = safe_scale(X_train, scaler, time_amount_idx)\n",
+    "X_val = safe_scale(X_val, scaler, time_amount_idx)\n",
+    "X_test = safe_scale(X_test, scaler, time_amount_idx)\n",
+    "\n",
+    "print(\"Preprocessing complete!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "03ae07bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class weights: {0: 0.5010555698904553, 1: 237.3388888888889}\n",
+      "XGBoost scale_pos_weight: 473.6777777777778\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.utils.class_weight import compute_class_weight\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "classes = np.unique(y_train)\n",
+    "class_weights = compute_class_weight('balanced', classes=classes, y=y_train)\n",
+    "class_weights = dict(zip(classes, class_weights))\n",
+    "\n",
+    "\n",
+    "scale_pos_weight = (y_train == 0).sum() / (y_train == 1).sum()\n",
+    "\n",
+    "print(\"Class weights:\", class_weights)\n",
+    "print(\"XGBoost scale_pos_weight:\", scale_pos_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1220f9bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend ThreadingBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:   14.0s\n",
+      "[Parallel(n_jobs=-1)]: Done 100 out of 100 | elapsed:   31.1s finished\n",
+      "C:\\ProgramData\\anaconda3\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All models trained!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from xgboost import XGBClassifier\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Dropout\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "\n",
+    "\n",
+    "lr = LogisticRegression(class_weight=class_weights, max_iter=1000)\n",
+    "lr.fit(X_train, y_train)\n",
+    "\n",
+    "rf = RandomForestClassifier(class_weight=class_weights, n_jobs=-1, oob_score=True, verbose=1)\n",
+    "rf.fit(X_train, y_train)\n",
+    "\n",
+    "xgb = XGBClassifier(scale_pos_weight=scale_pos_weight, eval_metric='logloss', early_stopping_rounds=50)\n",
+    "xgb.fit(X_train, y_train, eval_set=[(X_val, y_val)], verbose=0)\n",
+    "\n",
+    "\n",
+    "def create_nn():\n",
+    "    model = Sequential([\n",
+    "        Dense(64, activation='relu', input_dim=X_train.shape[1]),\n",
+    "        Dropout(0.5),\n",
+    "        Dense(32, activation='relu'),\n",
+    "        Dropout(0.3),\n",
+    "        Dense(1, activation='sigmoid')\n",
+    "    ])\n",
+    "    model.compile(optimizer=Adam(0.001), loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "    return model\n",
+    "\n",
+    "nn = create_nn()\n",
+    "history = nn.fit(\n",
+    "    X_train, y_train,\n",
+    "    validation_data=(X_val, y_val),\n",
+    "    epochs=100,\n",
+    "    batch_size=2048,\n",
+    "    class_weight=class_weights,\n",
+    "    callbacks=[EarlyStopping(patience=10, restore_best_weights=True)],\n",
+    "    verbose=0\n",
+    ")\n",
+    "\n",
+    "print(\"All models trained!\")"
+   ]
   }
  ],
  "metadata": {
